refactorizando open.api client-microservices
